# mcp-dados-brasil

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: python-lint.yml
datasets/: lista_operadoras_saude.yaml
src/mcp_ckan_dados_brasil/: __init__.py
src/mcp_ckan_dados_brasil/datasets/: bolsa-familia.py  bolsa_familia.py  lista_operadoras_saude.yaml.ignore  municipios.py  newest_oldest.yaml.ignore
src/mcp_ckan_dados_brasil/datasets/aplicacoes/: 2026-aplicacoes.mds.gov.br.csv  README.md
src/mcp_ckan_dados_brasil/datasets/aplicacoes-bolsa-familia/: .~lock.bolsa_familia_2024.csv#  .~lock.bolsa_familia_2025.csv#  bolsa_familia_2024.csv  bolsa_familia_2025.csv
src/mcp_ckan_dados_brasil/datasets/aplicacoes-bolsa-familia/municipios/: README.md
src/mcp_ckan_dados_brasil/datasets/compras-publicas-do-governo-federal/: README.md
src/mcp_ckan_dados_brasil/datasets/operadoras_saude/: LOGS-lista_operadoras_saude.json  README.md
src/mcp_ckan_dados_brasil/emendas/: load_db.py  tools.py
