[project]
name = "mcp-ckan-dados-brasil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "OKFN", email = "info@okfn.org" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=6.0.0",  # Code linting
]

[project.scripts]
mcp-ckan-dados-brasil = "mcp_ckan_dados_brasil:main"

[project.entry-points."mcp_ckan"]
mcp-ckan-dados-brasil = "mcp_ckan_dados_brasil:register_tools"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
